--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
    <!-- Google Fonts -->
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-   <!-- Vendor CSS Files -->
-   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -42,7 +35,7 @@
           <li><a class="nav-link scrollto" href="#">Services</a></li>
           <li><a class="nav-link scrollto" href="#">Products</a></li>
           
-          <li><a class="getstarted scrollto btn-dark rounded-1 rounded-1" href="#">Call to Action</a></li>
+          <li><a class="getstarted scrollto btn-dark rounded-1 rounded-1" href="#products">Call to Action</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -60,8 +53,8 @@
               ipsum dolor sit amet consectetur adipisicing elit.odio adipisci placeat nulla iusto.
             </strong> </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, enim vel aliquet hendrerit, nisi metus euismod massa, vel dictum nisi ex in mi. Mauris quis tristique leo. Donec et felis est.</p>
-            <button class="btn btn-dark rounded-1" href="#">Call to Action</button>
-            <button class="btn btn-outline-dark rounded-1" href="#">Call to Action</button>
+            <button class="btn btn-dark rounded-1" href="#products">Call to Action</button>
+            <button class="btn btn-outline-dark rounded-1" href="#products">Call to Action</button>
           </div>
           <div class="col-md-6 hero-head">
              
@@ -105,7 +98,7 @@
   <div class="filters row">
     <div class="form-group col-sm-3">
       <label for="search-element">Product name</label>
-      <input v-model="searchKey" class="form-control" id="search-element" requred/>
+      <input v-model="searchKey" placeholder="Search by product name..." class="form-control" id="search-element" requred/>
     </div>
   </div>
 
@@ -141,7 +134,7 @@
     <div class="col-sm-5">
       <div class="card tbg-light mb-5">
         <div class="card-header text-center ">
-          <h2 class=".text-secondary">
+          <h2 class=".text-secondary" id="products">
             Header Text
           </h2>
           <p class="stylished-gray">
@@ -269,11 +262,6 @@
 </section>
 </template>
 
-<template id="homepage" class="homepage">
-  <section> 
-  </section>
-</template>
-
 
 
  
@@ -334,14 +322,13 @@
             ipsum dolor sit amet consectetur adipisicing elit.odio adipisci placeat nulla iusto.
           </strong> </h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, enim vel aliquet hendrerit, nisi metus euismod massa, vel dictum nisi ex in mi. Mauris quis tristique leo. Donec et felis est.</p>
-          <button class="btn btn-dark rounded-1" href="#">Call to Action</button> 
+          <button class="btn btn-dark rounded-1" href="#products">Call to Action</button> 
         </div>
 
       </div>
     </div>
   </div>
 
-   
 </footer><!-- End Footer -->
 </main>
 <script src='node_modules/vue/dist/vue.js'></script>
