--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1><strong>
               ipsum dolor sit amet consectetur adipisicing elit.odio adipisci placeat nulla iusto.
             </strong> </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, enim vel aliquet hendrerit, nisi metus euismod massa, vel dictum nisi ex in mi. Mauris quis tristique leo. Donec et felis est.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, enim vel aliquet hendrerit, nisi metus euismod massa, vel dictum nisi ex in mi. Mauris quis tristique leo. Donec et felis.</p>
             <button class="btn btn-dark rounded-1" href="#products">Call to Action</button>
             <button class="btn btn-outline-dark rounded-1" href="#products">Call to Action</button>
           </div>
